Basically drew the rest of the owl. Hooked up the functions to the buttons, handled most off cases. ResultsContainer needs CSS work for functionality, everything needs CSS work to look nice. Project is basically finished, outside of extra credit, and decimals that end with  have the  on the  that nothing else ever goes to, even if there's room for the .

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>
         Enjoy using the Calculator below!
     </h1>
-    <div id=resultsContainer>0</div>
+    <div id=resultsContainer></div>
     <div id="calculatorContainer" class="wrapperCalc">
         <div id="numberContainer" class="wrapperNumbers">
             <button id="button7">7</button>
